feat: pokemon enviado ao card

--- a/src/app/components/choose-pokemon/choose-pokemon.component.html
+++ b/src/app/components/choose-pokemon/choose-pokemon.component.html
@@ -1,5 +1,9 @@
 <div class="carroussel">
     <div class="poke-card" *ngFor="let pokemon of pokemons">
-        <p>{{ pokemon.name }}</p>
+        <app-pokemon-card name="{{ pokemon.name }}"
+        [abilities]="pokemon.abilities"
+        [sprite]="pokemon.sprites"
+        [stats]="pokemon.stats"
+        [type]="pokemon.type"></app-pokemon-card>
     </div>
 </div>
