feat: stats and color added

--- a/src/app/components/choose-pokemon/choose-pokemon.component.html
+++ b/src/app/components/choose-pokemon/choose-pokemon.component.html
@@ -4,6 +4,6 @@
         [abilities]="pokemon.abilities"
         [sprite]="pokemon.sprites"
         [stats]="pokemon.stats"
-        [type]="pokemon.type"></app-pokemon-card>
+        [type]="pokemon.types"></app-pokemon-card>
     </div>
 </div>
