--- a/src/app/components/pokemon-card/pokemon-card.component.css
+++ b/src/app/components/pokemon-card/pokemon-card.component.css
@@ -3,12 +3,23 @@
     flex-direction: column;
     align-items: center;
     width: 340px;
-    height: 370px;
+    height: 510px;
+    border-radius: 5px;
 }
 
 .container > img {
     width: 240px;
     height: 240px;
+}
+
+.stats {
+    display: flex;
+    gap: 50px;
+}
+
+.column > p {
+    font-size: 18px;
+    font-weight: 600;
 }
 
 .gray {
