--- a/src/app/components/pokemon-card/pokemon-card.component.html
+++ b/src/app/components/pokemon-card/pokemon-card.component.html
@@ -2,6 +2,11 @@
     <h1>{{ name }}</h1>
     <img [src]="sprite && sprite.front_default ? sprite.front_default : ''">
     <div class="stats">
-        <p *ngFor="let stat of stats">{{ stat.stat.name }}: {{ stat.base_stat }}</p>
-    </div>
+        <div class="column">
+            <p *ngFor="let stat of stats.slice(0, 3)">{{ stat.stat.name }}: {{ stat.base_stat }}</p>
+          </div>
+          <div class="column">
+            <p *ngFor="let stat of stats.slice(3, 6)">{{ stat.stat.name }}: {{ stat.base_stat }}</p>
+          </div>
+        </div>
 </div>
